# openscan-hub

./: .gitignore  Dockerfile  LICENSE  README.md  build_exe.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
openscan/: __init__.py  __main__.py  config.py  discovery.py  main.py  monitor.py  multipage.py  output.py  tray.py
openscan/scanner/: __init__.py  base.py  escl.py  folder_watch.py  ftp_receive.py  wsd.py
openscan/web/: __init__.py  dashboard_api.py  server.py  wizard_api.py
openscan/web/static/css/: style.css
openscan/web/static/js/: dashboard.js  wizard.js
openscan/web/static/templates/: dashboard.html  wizard.html
